bugfix : toLost -> Collector...